--- a/index.html
+++ b/index.html
@@ -699,26 +699,30 @@
                     </div>
 
                     <div class="row py-3">
-                        <div class="col-12">
-                            <a class="td_none-s text-dark trigger_rating-d" role="button" href="javascript:void(0)">
-                                <h4 class="border-bottom py-3">Rating </h4>
+                        <div class="col-12 d-flex justify-content-between border-bottom trigger_rating-d">
+                            <a class="td_none-s text-dark" role="button" href="javascript:void(0)">
+                                <h4 class="py-3">Rating </h4>
                             </a>
+                            <img class="float-right" src="assets/images/arrow_black.svg" alt="">
                             <!-- <h6></h6> -->
                         </div>
                     </div>
                     <div class="row py-3">
-                        <div class="col-12">
-                            <a class="td_none-s text-dark trigger_price-d" role="button" href="#">
-                                <h4 class="border-bottom py-3">Price </h4>
+                        <div class="col-12 d-flex justify-content-between border-bottom trigger_price-d">
+                            <a class="td_none-s text-dark" role="button" href="#">
+                                <h4 class="py-3">Price </h4>
                             </a>
+                            <img class="float-right" src="assets/images/arrow_black.svg" alt="">
+
                             <!-- <h6></h6> -->
                         </div>
                     </div>
                     <div class="row py-3">
-                        <div class="col-12">
-                            <a class="td_none-s text-dark trigger_location-d" role="button" href="#">
+                        <div class="col-12 d-flex justify-content-between border-bottom trigger_location-d">
+                            <a class="td_none-s text-dark" role="button" href="#">
                                 <h4 class="py-3">Nearest Location </h4>
                             </a>
+                            <img class="float-right" src="assets/images/arrow_black.svg" alt="">
                             <!-- <h6></h6> -->
                         </div>
                     </div>
@@ -916,6 +920,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="assets/js/common.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
