--- a/about_us.html
+++ b/about_us.html
@@ -26,12 +26,12 @@
             <div class="row pt-4 pb-3">
                 <div class="col-xl-8 col-lg-8 col-md-8 col-12 d-flex order-md-2 order-2">
                     <a class="td_none-s" href="more.html">
-                        <h4 class="pr-2 text-dark">More</h4>
+                        <h4 class="pr-2 text-dark fs_sm_21px-s">More</h4>
                     </a>
-                    <h4 class="px-2"><strong>/</strong></h4>
-                    <h4 class="fg_green-s pl-2">About Us</h4>
+                    <h4 class="px-2 fs_sm_21px-s"><strong>/</strong></h4>
+                    <h4 class="fg_green-s fs_sm_21px-s pl-2">About Us</h4>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-4 col-10 pt-2 text-right order-md-2 order-1">
+                <div class="col-xl-4 col-lg-4 col-md-4 col-12 pt-2 text-right order-md-2 order-1">
                     <div class="">
                         <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
                         <span class="text-dark"> <strong>Adailiya </strong> </span>
