--- a/edit_profile.html
+++ b/edit_profile.html
@@ -28,12 +28,12 @@
             <div class="row pt-4 pb-3">
                 <div class="col-xl-8 col-lg-8 col-md-8 col-12 d-flex order-md-1 order-2">
                     <a class="td_none-s" href="more.html">
-                        <h4 class="pr-2 text-dark">More</h4>
+                        <h4 class="pr-2 fs_sm_21px-s text-dark">More</h4>
                     </a>
-                    <h4 class="px-2"><strong>/</strong></h4>
-                    <h4 class="fg_green-s pl-2">Edit Personal Profile</h4>
+                    <h4 class="px-2 fs_sm_21px-s"><strong>/</strong></h4>
+                    <h4 class="fg_green-s fs_sm_21px-s pl-2">Edit Personal Profile</h4>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-4 col-10 pt-2 text-right order-md-2 order-1">
+                <div class="col-xl-4 col-lg-4 col-md-4 col-12 pt-2 text-right order-md-2 order-1">
                     <div class="">
                         <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
                         <span class="text-dark"> <strong>Adailiya </strong> </span>
@@ -198,7 +198,7 @@
             </form>
             <div class="row px-xl-5 px-3 py-5">
                 <div class="col-12 text-right">
-                    <button type="submit" class="btn bg_green-s br_10px-s py-3 text-white w_h_184px_x_63px-s"><strong>SAVE</strong></button>
+                    <a href="more.html" type="submit" class="btn bg_green-s br_10px-s py-3 text-white w_h_184px_x_63px-s"><strong>SAVE</strong></a>
                 </div>
             </div>
         </div>
