--- a/game_invitation.html
+++ b/game_invitation.html
@@ -205,11 +205,11 @@
                         <div class="heart_icon fs_32px-s">
                             <i class="fa fa-heart" aria-hidden="true"></i>
                         </div>
-                        <div class="card-body px-1">
-                            <div class="container-fluid px-0">
-                                <div class="row px-4">
+                        <div class="card-body pt-2 pb-3 px-1">
+                            <div class="container-fluid px-xl-0">
+                                <div class="row px-xl-4">
                                     <div class="col-xl-2 col-3">
-                                        <img src="assets/images/Group 24.png" alt="" />
+                                        <img src="assets/images/Group 24.png" alt="">
                                     </div>
                                     <div class="col-xl-10 col-9 ">
                                         <div class="row ">
@@ -217,7 +217,7 @@
                                                 <div class="text-white">
                                                     <h6 class="mb-0">Thamer</h6>
                                                     <span class=" opacity_4-s fs_11px-s">@thamermd</span>
-                                                    <p class="fg_yellow-s fs_11px-s">
+                                                    <p class="fg_yellow-s mb-2 fs_11px-s">
                                                         <i class="fa fa-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -226,7 +226,7 @@
                                                     </p>
                                                 </div>
                                             </div>
-                                            <div class="col-xl-7 col-12 pb-xl-0 pb-3 d-flex justify-content-between">
+                                            <div class="col-xl-7 col-12 pb-xl-0 pb-2 d-flex justify-content-between">
                                                 <div class="">
                                                     <h6 class="text-white mb-0"> $10 </h6>
                                                     <span class="opacity_4-s text-white fs_11px-s">Match Amount</span>
@@ -239,9 +239,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <hr class="goalkeeper_margin_b mt-0 mx-4" />
+                            <hr class="goalkeeper_margin_b mt-0 mb-2 mx-xl-4 mx-3">
 
-                            <div class="aditya_location mx-4">
+                            <div class="aditya_location mx-xl-4 mx-3">
                                 <h6 class="mb-0 pb-0">
                                     <i class="fa fa-map-marker" aria-hidden="true"></i>
                                     <span class="fs_12px-s">Jaber Al-Ahmad International Stadium</span>
@@ -249,7 +249,7 @@
                                 <span class="opacity_4-s fs_11px-s">Sami Al-Ahmad Al Munayes St, Al Kuwayt, Kuwait</span>
                             </div>
 
-                            <div class="row pt-3 pb-2 px-4">
+                            <div class="row pt-3 pb-2 px-xl-4 px-3">
                                 <div class="col-6 pr-2">
                                     <button type="button" class="btn fs_11px-s bg_grey-s br_10px-s fg_green-s py-3 w-100" data-toggle="modal" data-target="#cancel_invitation_modal-d"><strong>Decline</strong></button>
                                 </div>
@@ -273,11 +273,11 @@
                         <div class="heart_icon fs_32px-s">
                             <i class="fa fa-heart" aria-hidden="true"></i>
                         </div>
-                        <div class="card-body px-1">
-                            <div class="container-fluid px-0">
-                                <div class="row px-4">
+                        <div class="card-body pt-2 pb-3 px-1">
+                            <div class="container-fluid px-xl-0">
+                                <div class="row px-xl-4">
                                     <div class="col-xl-2 col-3">
-                                        <img src="assets/images/Group 24.png" alt="" />
+                                        <img src="assets/images/Group 24.png" alt="">
                                     </div>
                                     <div class="col-xl-10 col-9 ">
                                         <div class="row ">
@@ -285,7 +285,7 @@
                                                 <div class="text-white">
                                                     <h6 class="mb-0">Thamer</h6>
                                                     <span class=" opacity_4-s fs_11px-s">@thamermd</span>
-                                                    <p class="fg_yellow-s fs_11px-s">
+                                                    <p class="fg_yellow-s mb-2 fs_11px-s">
                                                         <i class="fa fa-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -294,7 +294,7 @@
                                                     </p>
                                                 </div>
                                             </div>
-                                            <div class="col-xl-7 col-12 pb-xl-0 pb-3 d-flex justify-content-between">
+                                            <div class="col-xl-7 col-12 pb-xl-0 pb-2 d-flex justify-content-between">
                                                 <div class="">
                                                     <h6 class="text-white mb-0"> $10 </h6>
                                                     <span class="opacity_4-s text-white fs_11px-s">Match Amount</span>
@@ -307,9 +307,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <hr class="goalkeeper_margin_b mt-0 mx-4" />
+                            <hr class="goalkeeper_margin_b mt-0 mb-2 mx-xl-4 mx-3">
 
-                            <div class="aditya_location mx-4">
+                            <div class="aditya_location mx-xl-4 mx-3">
                                 <h6 class="mb-0 pb-0">
                                     <i class="fa fa-map-marker" aria-hidden="true"></i>
                                     <span class="fs_12px-s">Jaber Al-Ahmad International Stadium</span>
@@ -317,7 +317,7 @@
                                 <span class="opacity_4-s fs_11px-s">Sami Al-Ahmad Al Munayes St, Al Kuwayt, Kuwait</span>
                             </div>
 
-                            <div class="row pt-3 pb-2 px-4">
+                            <div class="row pt-3 pb-2 px-xl-4 px-3">
                                 <div class="col-6 pr-2">
                                     <button type="button" class="btn fs_11px-s bg_grey-s br_10px-s fg_green-s py-3 w-100" data-toggle="modal" data-target="#cancel_invitation_modal-d"><strong>Decline</strong></button>
                                 </div>
@@ -341,11 +341,11 @@
                         <div class="heart_icon fs_32px-s">
                             <i class="fa fa-heart" aria-hidden="true"></i>
                         </div>
-                        <div class="card-body px-1">
-                            <div class="container-fluid px-0">
-                                <div class="row px-4">
+                        <div class="card-body pt-2 pb-3 px-1">
+                            <div class="container-fluid px-xl-0">
+                                <div class="row px-xl-4">
                                     <div class="col-xl-2 col-3">
-                                        <img src="assets/images/Group 24.png" alt="" />
+                                        <img src="assets/images/Group 24.png" alt="">
                                     </div>
                                     <div class="col-xl-10 col-9 ">
                                         <div class="row ">
@@ -353,7 +353,7 @@
                                                 <div class="text-white">
                                                     <h6 class="mb-0">Thamer</h6>
                                                     <span class=" opacity_4-s fs_11px-s">@thamermd</span>
-                                                    <p class="fg_yellow-s fs_11px-s">
+                                                    <p class="fg_yellow-s mb-2 fs_11px-s">
                                                         <i class="fa fa-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -362,7 +362,7 @@
                                                     </p>
                                                 </div>
                                             </div>
-                                            <div class="col-xl-7 col-12 pb-xl-0 pb-3 d-flex justify-content-between">
+                                            <div class="col-xl-7 col-12 pb-xl-0 pb-2 d-flex justify-content-between">
                                                 <div class="">
                                                     <h6 class="text-white mb-0"> $10 </h6>
                                                     <span class="opacity_4-s text-white fs_11px-s">Match Amount</span>
@@ -375,9 +375,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <hr class="goalkeeper_margin_b mt-0 mx-4" />
+                            <hr class="goalkeeper_margin_b mt-0 mb-2 mx-xl-4 mx-3">
 
-                            <div class="aditya_location mx-4">
+                            <div class="aditya_location mx-xl-4 mx-3">
                                 <h6 class="mb-0 pb-0">
                                     <i class="fa fa-map-marker" aria-hidden="true"></i>
                                     <span class="fs_12px-s">Jaber Al-Ahmad International Stadium</span>
@@ -385,7 +385,7 @@
                                 <span class="opacity_4-s fs_11px-s">Sami Al-Ahmad Al Munayes St, Al Kuwayt, Kuwait</span>
                             </div>
 
-                            <div class="row pt-3 pb-2 px-4">
+                            <div class="row pt-3 pb-2 px-xl-4 px-3">
                                 <div class="col-6 pr-2">
                                     <button type="button" class="btn fs_11px-s bg_grey-s br_10px-s fg_green-s py-3 w-100" data-toggle="modal" data-target="#cancel_invitation_modal-d"><strong>Decline</strong></button>
                                 </div>
@@ -427,19 +427,19 @@
                         <div class="heart_icon fs_32px-s">
                             <i class="fa fa-heart" aria-hidden="true"></i>
                         </div>
-                        <div class="card-body px-1">
-                            <div class="container-fluid px-0">
-                                <div class="row px-4">
+                        <div class="card-body pt-2 pb-3 px-1">
+                            <div class="container-fluid px-xl-0">
+                                <div class="row px-xl-4">
                                     <div class="col-xl-2 col-3">
-                                        <img src="assets/images/Group 24.png" alt="" />
+                                        <img src="assets/images/Group 24.png" alt="">
                                     </div>
-                                    <div class="col-xl-10 col-9 px-0">
-                                        <div class="row px-4">
-                                            <div class="col-xl-5 col-12">
+                                    <div class="col-xl-10 col-9 ">
+                                        <div class="row ">
+                                            <div class="col-xl-5 col-12 ">
                                                 <div class="text-white">
                                                     <h6 class="mb-0">Thamer</h6>
                                                     <span class=" opacity_4-s fs_11px-s">@thamermd</span>
-                                                    <p class="fg_yellow-s fs_11px-s">
+                                                    <p class="fg_yellow-s mb-2 fs_11px-s">
                                                         <i class="fa fa-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -448,7 +448,7 @@
                                                     </p>
                                                 </div>
                                             </div>
-                                            <div class="col-xl-7 col-12 px-0 d-flex justify-content-between">
+                                            <div class="col-xl-7 col-12 pb-xl-0 pb-2 d-flex justify-content-between">
                                                 <div class="">
                                                     <h6 class="text-white mb-0"> $10 </h6>
                                                     <span class="opacity_4-s text-white fs_11px-s">Match Amount</span>
@@ -461,9 +461,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <hr class="goalkeeper_margin_b mt-0 mx-4" />
+                            <hr class="goalkeeper_margin_b mt-0 mb-2 mx-xl-4 mx-3">
 
-                            <div class="aditya_location mx-4">
+                            <div class="aditya_location mx-xl-4 mx-3">
                                 <h6 class="mb-0 pb-0">
                                     <i class="fa fa-map-marker" aria-hidden="true"></i>
                                     <span class="fs_12px-s">Jaber Al-Ahmad International Stadium</span>
