--- a/hire_Players.html
+++ b/hire_Players.html
@@ -203,19 +203,19 @@
                         <div class="heart_icon fs_32px-s">
                             <i class="fa fa-heart" aria-hidden="true"></i>
                         </div>
-                        <div class="card-body px-1">
-                            <div class="container-fluid px-0">
-                                <div class="row px-4">
+                        <div class="card-body pt-2 pb-3 px-1">
+                            <div class="container-fluid px-xl-0">
+                                <div class="row px-xl-4">
                                     <div class="col-xl-2 col-3">
-                                        <img src="assets/images/Group 24.png" alt="" />
+                                        <img src="assets/images/Group 24.png" alt="">
                                     </div>
                                     <div class="col-xl-10 col-9 ">
                                         <div class="row ">
                                             <div class="col-xl-5 col-12 ">
                                                 <div class="text-white">
                                                     <h6 class="mb-0">Thamer</h6>
-                                                    <span class=" opacity_4-s fs_11px">@thamermd</span>
-                                                    <p class="fg_yellow-s fs_11px-s">
+                                                    <span class=" opacity_4-s fs_11px-s">@thamermd</span>
+                                                    <p class="fg_yellow-s mb-2 fs_11px-s">
                                                         <i class="fa fa-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -224,7 +224,7 @@
                                                     </p>
                                                 </div>
                                             </div>
-                                            <div class="col-xl-7 col-12 pb-xl-0 pb-3 d-flex justify-content-between">
+                                            <div class="col-xl-7 col-12 pb-xl-0 pb-2 d-flex justify-content-between">
                                                 <div class="">
                                                     <h6 class="text-white mb-0"> $10 </h6>
                                                     <span class="opacity_4-s text-white fs_11px-s">Match Amount</span>
@@ -237,9 +237,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <hr class="goalkeeper_margin_b mt-0 mx-4" />
+                            <hr class="goalkeeper_margin_b mt-0 mb-2 mx-xl-4 mx-3">
 
-                            <div class="aditya_location mx-4">
+                            <div class="aditya_location mx-xl-4 mx-3">
                                 <h6 class="mb-0 pb-0">
                                     <i class="fa fa-map-marker" aria-hidden="true"></i>
                                     <span class="fs_12px-s">Jaber Al-Ahmad International Stadium</span>
@@ -247,9 +247,9 @@
                                 <span class="opacity_4-s fs_11px-s">Sami Al-Ahmad Al Munayes St, Al Kuwayt, Kuwait</span>
                             </div>
 
-                            <div class="row pt-3 pb-2 px-4">
+                            <div class="row pt-3 pb-2 px-4 ">
                                 <div class="col-12 ">
-                                    <a href="chat.html" type="button" role="button" class="btn fs_12px-s bg-white br_10px-s fg_green-s py-3 w-100"><strong>Send Message</strong></a>
+                                    <a href="chat.html" type="submit" role="button" class="btn fs_12px-s bg-white br_10px-s fg_green-s py-3 w-100"><strong>Send Message</strong></a>
                                 </div>
                             </div>
                         </div>
@@ -266,19 +266,19 @@
                         <div class="heart_icon fs_32px-s">
                             <i class="fa fa-heart" aria-hidden="true"></i>
                         </div>
-                        <div class="card-body px-1">
-                            <div class="container-fluid px-0">
-                                <div class="row px-4">
+                        <div class="card-body pt-2 pb-3 px-1">
+                            <div class="container-fluid px-xl-0">
+                                <div class="row px-xl-4">
                                     <div class="col-xl-2 col-3">
-                                        <img src="assets/images/Group 24.png" alt="" />
+                                        <img src="assets/images/Group 24.png" alt="">
                                     </div>
                                     <div class="col-xl-10 col-9 ">
                                         <div class="row ">
                                             <div class="col-xl-5 col-12 ">
                                                 <div class="text-white">
                                                     <h6 class="mb-0">Thamer</h6>
-                                                    <span class=" opacity_4-s fs_11px">@thamermd</span>
-                                                    <p class="fg_yellow-s fs_11px-s">
+                                                    <span class=" opacity_4-s fs_11px-s">@thamermd</span>
+                                                    <p class="fg_yellow-s mb-2 fs_11px-s">
                                                         <i class="fa fa-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -287,7 +287,7 @@
                                                     </p>
                                                 </div>
                                             </div>
-                                            <div class="col-xl-7 col-12 pb-xl-0 pb-3 d-flex justify-content-between">
+                                            <div class="col-xl-7 col-12 pb-xl-0 pb-2 d-flex justify-content-between">
                                                 <div class="">
                                                     <h6 class="text-white mb-0"> $10 </h6>
                                                     <span class="opacity_4-s text-white fs_11px-s">Match Amount</span>
@@ -300,9 +300,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <hr class="goalkeeper_margin_b mt-0 mx-4" />
+                            <hr class="goalkeeper_margin_b mt-0 mb-2 mx-xl-4 mx-3">
 
-                            <div class="aditya_location mx-4">
+                            <div class="aditya_location mx-xl-4 mx-3">
                                 <h6 class="mb-0 pb-0">
                                     <i class="fa fa-map-marker" aria-hidden="true"></i>
                                     <span class="fs_12px-s">Jaber Al-Ahmad International Stadium</span>
@@ -310,7 +310,7 @@
                                 <span class="opacity_4-s fs_11px-s">Sami Al-Ahmad Al Munayes St, Al Kuwayt, Kuwait</span>
                             </div>
 
-                            <div class="row pt-3 pb-2 px-4">
+                            <div class="row pt-3 pb-2 px-4 ">
                                 <div class="col-12 ">
                                     <a href="chat.html" type="submit" role="button" class="btn fs_12px-s bg-white br_10px-s fg_green-s py-3 w-100"><strong>Send Message</strong></a>
                                 </div>
@@ -329,19 +329,19 @@
                         <div class="heart_icon fs_32px-s">
                             <i class="fa fa-heart" aria-hidden="true"></i>
                         </div>
-                        <div class="card-body px-1">
-                            <div class="container-fluid px-0">
-                                <div class="row px-4">
+                        <div class="card-body pt-2 pb-3 px-1">
+                            <div class="container-fluid px-xl-0">
+                                <div class="row px-xl-4">
                                     <div class="col-xl-2 col-3">
-                                        <img src="assets/images/Group 24.png" alt="" />
+                                        <img src="assets/images/Group 24.png" alt="">
                                     </div>
                                     <div class="col-xl-10 col-9 ">
                                         <div class="row ">
                                             <div class="col-xl-5 col-12 ">
                                                 <div class="text-white">
                                                     <h6 class="mb-0">Thamer</h6>
-                                                    <span class=" opacity_4-s fs_11px">@thamermd</span>
-                                                    <p class="fg_yellow-s fs_11px-s">
+                                                    <span class=" opacity_4-s fs_11px-s">@thamermd</span>
+                                                    <p class="fg_yellow-s mb-2 fs_11px-s">
                                                         <i class="fa fa-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -350,7 +350,7 @@
                                                     </p>
                                                 </div>
                                             </div>
-                                            <div class="col-xl-7 col-12 pb-xl-0 pb-3 d-flex justify-content-between">
+                                            <div class="col-xl-7 col-12 pb-xl-0 pb-2 d-flex justify-content-between">
                                                 <div class="">
                                                     <h6 class="text-white mb-0"> $10 </h6>
                                                     <span class="opacity_4-s text-white fs_11px-s">Match Amount</span>
@@ -363,9 +363,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <hr class="goalkeeper_margin_b mt-0 mx-4" />
+                            <hr class="goalkeeper_margin_b mt-0 mb-2 mx-xl-4 mx-3">
 
-                            <div class="aditya_location mx-4">
+                            <div class="aditya_location mx-xl-4 mx-3">
                                 <h6 class="mb-0 pb-0">
                                     <i class="fa fa-map-marker" aria-hidden="true"></i>
                                     <span class="fs_12px-s">Jaber Al-Ahmad International Stadium</span>
@@ -410,19 +410,19 @@
                         <div class="heart_icon fs_32px-s">
                             <i class="fa fa-heart" aria-hidden="true"></i>
                         </div>
-                        <div class="card-body px-1">
-                            <div class="container-fluid px-0">
-                                <div class="row px-4">
+                        <div class="card-body pt-2 pb-3 px-1">
+                            <div class="container-fluid px-xl-0">
+                                <div class="row px-xl-4">
                                     <div class="col-xl-2 col-3">
-                                        <img src="assets/images/Group 24.png" alt="" />
+                                        <img src="assets/images/Group 24.png" alt="">
                                     </div>
                                     <div class="col-xl-10 col-9 ">
                                         <div class="row ">
                                             <div class="col-xl-5 col-12 ">
                                                 <div class="text-white">
                                                     <h6 class="mb-0">Thamer</h6>
-                                                    <span class=" opacity_4-s fs_11px">@thamermd</span>
-                                                    <p class="fg_yellow-s fs_11px-s">
+                                                    <span class=" opacity_4-s fs_11px-s">@thamermd</span>
+                                                    <p class="fg_yellow-s mb-2 fs_11px-s">
                                                         <i class="fa fa-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -431,7 +431,7 @@
                                                     </p>
                                                 </div>
                                             </div>
-                                            <div class="col-xl-7 col-12 pb-xl-0 pb-3 d-flex justify-content-between">
+                                            <div class="col-xl-7 col-12 pb-xl-0 pb-2 d-flex justify-content-between">
                                                 <div class="">
                                                     <h6 class="text-white mb-0"> $10 </h6>
                                                     <span class="opacity_4-s text-white fs_11px-s">Match Amount</span>
@@ -444,9 +444,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <hr class="goalkeeper_margin_b mt-0 mx-4" />
+                            <hr class="goalkeeper_margin_b mt-0 mb-2 mx-xl-4 mx-3">
 
-                            <div class="aditya_location mx-4">
+                            <div class="aditya_location mx-xl-4 mx-3">
                                 <h6 class="mb-0 pb-0">
                                     <i class="fa fa-map-marker" aria-hidden="true"></i>
                                     <span class="fs_12px-s">Jaber Al-Ahmad International Stadium</span>
@@ -456,7 +456,9 @@
 
                             <div class="row pt-3 pb-2 px-4">
                                 <div class="col-6 pr-2">
-                                    <a href="rating_player.html"><button type="button" class="btn fs_11px-s bg_grey-s br_10px-s fg_green-s py-3 w-100"><strong>Rate</strong></button></a>
+                                    <a href="rating_player.html">
+                                        <button type="button" class="btn fs_11px-s bg_grey-s br_10px-s fg_green-s py-3 w-100"><strong>Rate</strong></button>
+                                    </a>
                                 </div>
 
                                 <!--SUBMIT button-->
