--- a/term_and_condition.html
+++ b/term_and_condition.html
@@ -26,12 +26,12 @@
         <div class="row pt-4 pb-3">
             <div class="col-xl-8 col-lg-8 col-md-8 col-12 d-flex order-md-1 order-2">
                 <a class="td_none-s" href="more.html">
-                    <h4 class="pr-2 text-dark">More</h4>
+                    <h4 class="pr-2 fs_sm_21px-sfs_sm_21px-s text-dark">More</h4>
                 </a>
-                <h4 class="px-2"><strong>/</strong></h4>
-                <h4 class="fg_green-s pl-2">Terms & Conditions</h4>
+                <h4 class="px-2 fs_sm_21px-s"><strong>/</strong></h4>
+                <h4 class="fg_green-s fs_sm_21px-s pl-2">Terms & Conditions</h4>
             </div>
-            <div class="col-xl-4 col-lg-4 col-md-4 col-10 pt-2 text-right order-md-2 order-1">
+            <div class="col-xl-4 col-lg-4 col-md-4 col-12 pt-2 text-right order-md-2 order-1">
                 <div class="">
                     <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
                     <span class="text-dark"> <strong>Adailiya </strong> </span>
@@ -141,8 +141,8 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-12 d-flex justify-content-md-end pt-lg-0 pt-3">
-                    <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 px-5 mr-2 w_h_184px_x_63px-s"><strong>DECLINE</strong></button>
-                    <button type="submit" class="btn bg_green-s br_10px-s py-3 text-white px-5 ml-2 w_h_184px_x_63px-s"><strong>ACCEPT</strong></button>
+                    <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 mr-2 w_h_184px_x_63px-s"><strong>DECLINE</strong></button>
+                    <button type="submit" class="btn bg_green-s br_10px-s py-3 text-white ml-2 w_h_184px_x_63px-s"><strong>ACCEPT</strong></button>
                 </div>
             </div>
         </div>
