--- a/more.html
+++ b/more.html
@@ -213,8 +213,8 @@
             </div>
 
             <div class="row pt-3 pb-5 px-xl-5">
-                <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
-                    <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between">
+                <div class="col-12 pt-3">
+                    <div class="d-flex bg_grey-s py-4 px-3 br_10px-s text-dark justify-content-between">
                         <div class="align-self-center">
                             <h6 class="mb-0"><strong>App Notifications</strong></h6>
                         </div>
